--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-runtime": "^5.0.0",
+    "bootstrap-select": "^1.13.2",
     "browser-sync": "^2.10.0",
     "css-mqpacker": "^5.0.1",
     "del": "^2.2.0",
@@ -56,6 +57,7 @@
     "lint-staged": "^4.0.2",
     "lodash": "^4.3.0",
     "lost": "^7.1.0",
+    "popper.js": "^1.14.4",
     "postcss-csso": "^2.0.0",
     "require-dir": "^0.3.2",
     "require-yaml": "^0.0.1",
