--- a/src/index.yaml
+++ b/src/index.yaml
@@ -21,5 +21,5 @@ PageList:
   ready: 50
 - file: compain-audience-1.html
   ready: 50
-- file: campaigns.html
-  ready: 50
+- file: сampaigns.html
+  ready: 100
